# project-base

./: .gitignore  .pre-commit-config.yaml  compose.override.yml  compose.yml  roadmap.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  biome.json  package-lock.json  package.json
